--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+/* @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap'); */
+
+body {
+  @apply font-rajdhani antialiased;
+}
+
+html, body {
+  @apply overflow-hidden h-screen;
+}
+
+.btn-green-md {
+  @apply bg-green-600 hover:bg-green-700 px-4 py-2 my-4 text-gray-300 rounded-lg font-semibold;
+}
+
+
 .message-container {
     display: flex;
     flex-direction: column; /* Align children in a column */
